# sdl2-c17-template

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml
assets/: crosshair1.xcf  enemy1.xcf  explosion1.xcf  ship1.xcf  shot1.xcf  solid-tileset.xcf  spaceset.xcf
src/: CMakeLists.txt  animation.c  animation.h  app.c  app.h  config.h  context.h  control.c  control.h  draw.c  draw.h  image.c  image.h  init.c  init.h  input.c  input.h  main.c  object.c  object.h  profile.c  profile.h  sprite.c  sprite.h  text.h  timer.c  timer.h  types.h  utility.c  utility.h
